--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,6 +12,7 @@ body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  overflow: inherit;
 }
 a {
   text-decoration: none;
@@ -133,6 +134,15 @@ a:focus {
 @media (max-width: 798px) {
   .nav-items {
     display: none;
+  }
+  .nav-items-open {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    opacity: 2;
+    top: 0;
   }
 }
 @media (max-width: 571px) {
