--- a/client/src/App.css
+++ b/client/src/App.css
@@ -61,6 +61,8 @@ a:focus {
   display: flex;
   align-items: center;
   width: 160px;
+  position: absolute;
+  left: 80px;
 }
 .search input {
   border: none;
@@ -142,6 +144,11 @@ a:focus {
 .menu-btn.open .menu-btn-burger::after {
   transform: rotate(-45deg) translate(35px, 35px);
 }
+.nav-items > .nav-items-open > .nav-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 @media (min-width: 798px) {
   .menu-btn {
@@ -152,16 +159,28 @@ a:focus {
   .nav-items {
     display: none;
   }
+  .loginbtn {
+    right: 80px;
+    position: absolute;
+  }
   .nav-items-open {
     display: flex;
     flex-direction: column;
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100vh;
+    left: 0;
+    background: var(--primary-color);
     opacity: 2;
-    top: 0;
+    top: 9vh;
+    align-items: center;
+    justify-content: center;
+    -webkit-animation: scale-in-tr 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+      both;
+    animation: scale-in-tr 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
   }
 }
+
 @media (max-width: 571px) {
   .loginbtn {
     display: none;
@@ -170,5 +189,37 @@ a:focus {
 @media (max-width: 400px) {
   .search {
     display: none;
+  }
+}
+@-webkit-keyframes scale-in-tr {
+  0% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    -webkit-transform-origin: 100% 0%;
+    transform-origin: 100% 0%;
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transform-origin: 100% 0%;
+    transform-origin: 100% 0%;
+    opacity: 1;
+  }
+}
+@keyframes scale-in-tr {
+  0% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    -webkit-transform-origin: 100% 0%;
+    transform-origin: 100% 0%;
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transform-origin: 100% 0%;
+    transform-origin: 100% 0%;
+    opacity: 1;
   }
 }
