--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap");
+
 :root {
   --primary-color: #185ee0;
   --secondary-color: #e6eef9;
   --navbar-color: #00c8ab;
+  --nav-bg: #076355;
+  --link-focus: #8b8b8b;
 }
 
 *,
@@ -13,6 +17,7 @@ body {
   margin: 0;
   box-sizing: border-box;
   overflow: inherit;
+  font-family: "Rubik", sans-serif;
 }
 a {
   text-decoration: none;
@@ -37,12 +42,7 @@ input:focus {
   padding: 0 1rem;
   background: var(--navbar-color);
 }
-.nav-items {
-  display: flex;
-}
-.nav-item {
-  padding: 0 0.5em;
-}
+
 .btn {
   padding: 8px 14px;
   border-radius: 0.2em;
@@ -54,7 +54,7 @@ input:focus {
   color: var(--navbar-color);
 }
 a:focus {
-  color: var(--primary-color);
+  color: var(--link-focus);
 }
 
 .search {
@@ -144,12 +144,44 @@ a:focus {
 .menu-btn.open .menu-btn-burger::after {
   transform: rotate(-45deg) translate(35px, 35px);
 }
-.nav-items > .nav-items-open > .nav-item {
+
+.nav-items {
+  display: flex;
+  font-size: 1.1rem;
+}
+.nav-item {
+  padding: 0 1rem;
+  height: 2.5em;
   display: flex;
   align-items: center;
+  color: var(--secondary-color);
+}
+.nav-item:hover {
+  background: var(--secondary-color);
+}
+.nav-item-link {
+  padding: 0 0.5em;
+}
+.nav-items > .nav-items-open > .nav-item {
+  display: flex;
   justify-content: center;
 }
+.nav-items .nav-item-icon {
+  display: none;
+}
 
+/* ============= @media responsive starts ============== */
+
+@media (max-width: 571px) {
+  .loginbtn {
+    display: none;
+  }
+}
+@media (max-width: 400px) {
+  .search {
+    display: none;
+  }
+}
 @media (min-width: 798px) {
   .menu-btn {
     display: none;
@@ -170,28 +202,28 @@ a:focus {
     width: 100%;
     height: 100vh;
     left: 0;
-    background: var(--primary-color);
+    background: var(--nav-bg);
     opacity: 2;
     top: 9vh;
+    padding-top: 20px;
     align-items: center;
-    justify-content: center;
-    -webkit-animation: scale-in-tr 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
-      both;
-    animation: scale-in-tr 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+    justify-content: flex-start;
+    -webkit-animation: navbar-animation 0.5s
+      cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+    animation: navbar-animation 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  }
+  .nav-item .nav-item-icon {
+    display: block;
+    color: var(--secondary-color);
+  }
+  .nav-item {
+    width: 100%;
   }
 }
 
-@media (max-width: 571px) {
-  .loginbtn {
-    display: none;
-  }
-}
-@media (max-width: 400px) {
-  .search {
-    display: none;
-  }
-}
-@-webkit-keyframes scale-in-tr {
+/* ============= animation keyframes start ============== */
+
+@-webkit-keyframes navbar-animation {
   0% {
     -webkit-transform: scale(0);
     transform: scale(0);
@@ -207,7 +239,7 @@ a:focus {
     opacity: 1;
   }
 }
-@keyframes scale-in-tr {
+@keyframes navbar-animation {
   0% {
     -webkit-transform: scale(0);
     transform: scale(0);
